test_src/compiler_errors/types/binary/XorBoolError4.b
class XorBoolError4 {
    void test() {
        var value = true;
        println(value ^= 6);
    }
}
